lesson09/grammar.txt
program = global_block

global_block = global_stmt global_block | global_stmt
global_stmt = f_decl ';' | f_def
f_def = f_decl '{' block '}'

f_decl = 'fn' id '(' decl_args ')' '->' typename
decl_args = typename id ',' decl_args | typename id | ''

block = stmt block | stmt

stmt = if | while | var_decl | assignment | return | exec_expr

if = 'if' paren_expr '{' block '}'
while = 'while' paren_expr '{' block '}'

var_decl = typename id ';'

assignment = lvalue '=' expr ';'
lvalue = deref | id

return = 'return' expr ';'

exec_expr = expr ';'

expr = eq | lt | gt | lte | gte | arith

eq = arith '==' expr
lt = arith '<' expr
gt = arith '>' expr
lte = arith '<=' expr
gte = arith '>=' expr

arith = sum | sub | term

sum = term '+' arith
sub = term '-' arith

term = mul | div | atom

mul = atom '*' term
div = atom '/' term

atom = paren_expr | static_cast | str_const | array_const | number | call | ref | deref | id

paren_expr = '(' expr ')'

static_cast = 'static_cast' '<' typename '>' '(' expr ')'

str_const = '"' ... '"'

array = '[' comma_vals ']'

call = id '(' comma_vals ')'

comma_vals = expr ',' comma_vals | expr | ''

ref = '&' lvalue
deref = '*' typename expr

### id и number парсим просто циклом
number = -?[0-9]+
id = [A-Za-z_][A-Za-z_0-9]*


typename = [A-Za-z_][A-Za-z_0-9]*
